# FlyPi

./: .gitignore  pyproject.toml
flypi/: __main__.py
flypi/couriers/: asendia.py
flypi/types/: CourierFetcher.py  ShipmentStatus.py  __init__.py
flypi/utils/: __init__.py  env.py  fastapi.py
